# bb-storage

./: BUILD.bazel  WORKSPACE  rules-go_grpc-go_binlogger-visibility.patch
cmd/bb_storage/: main.go
pkg/blobstore/configuration/: BUILD.bazel  create_blob_access.go
pkg/builder/: forwarding_build_queue.go
pkg/cas/: byte_stream_server.go
pkg/configuration/: configuration_test.go
pkg/configuration/testdata/: fullconfig.json
pkg/filesystem/: BUILD.bazel  local_directory.go
pkg/proto/configuration/server/: server.proto
pkg/util/: BUILD.bazel  grpc.go  tls.go  tls_test.go
