load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix github.com/buildbarn/bb-storage
gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)

exports_files(["rules-go_grpc-go_binlogger-visibility.patch"])

load("@io_bazel_rules_go//go:def.bzl", "go_path")

# build this to get the gopath directory that can be used by standard Go tools
# Referenced in vscode project config .vscode/settings.json
go_path(
    name = "gopath",
    testonly = True,  # so we can depend on test targets
    deps = [
               "%s:go_default_library" % (pkg)
               for pkg in ["//pkg/%s" % (dir) for dir in [
                   "builder",
                   "ac",
                   "blobstore",
                   "cas",
                   "configuration",
                   "filesystem",
                   "util",
               ]]
           ] +
           [
               "%s:go_default_test" % (pkg)
               for pkg in ["//pkg/%s" % (dir) for dir in [
                   "util",
               ]]
           ] + [
        "//cmd/bb_storage",
    ],
)
